Feat/leave requests checks (#38)
* Implemented endpoints for getting and updating leave type details

* extended the submit leave request endpoint to accept employeeUid in the body.

* Implemented an endpoint to get all department leave requests for a department manager
